--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SANDITH-PC;Initial Catalog=AutoBid_Main;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    //"DefaultConnection": "Data Source=SANDITH-PC;Initial Catalog=AutoBid_Main;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=localhost;Database=AuctionDB;User Id=SA;Password=MyStrongPass123;Encrypt=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
